// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Big Button 1`] = `
<Button
  big={true}
  inverse={false}
  loading={false}
  secondary={false}
>
  <styled.button
    big={true}
    inverse={false}
    secondary={false}
  >
    <button
      className="sc-AykKE iGGzZZ"
    >
      Secondary Button
    </button>
  </styled.button>
</Button>
`;

exports[`Button Inverse Button 1`] = `
<Button
  big={false}
  inverse={true}
  loading={false}
  secondary={false}
>
  <styled.button
    big={false}
    inverse={true}
    secondary={false}
  >
    <button
      className="sc-AykKE efqody"
    >
      Secondary Button
    </button>
  </styled.button>
</Button>
`;

exports[`Button Loading Button 1`] = `
<Button
  big={false}
  inverse={false}
  loading={true}
  secondary={false}
>
  <styled.button
    big={false}
    inverse={false}
    secondary={false}
  >
    <button
      className="sc-AykKE hLfXme"
    >
      <Loader
        small={true}
        white={true}
      >
        <styled.div
          small={true}
          white={true}
        >
          <div
            className="sc-AykKC mtNms"
          >
            <styled.span
              small={true}
              style={Object {}}
              white={true}
            >
              <span
                className="sc-AykKD ietOlp"
                style={Object {}}
              />
            </styled.span>
            <styled.span
              small={true}
              style={Object {}}
              white={true}
            >
              <span
                className="sc-AykKD ietOlp"
                style={Object {}}
              />
            </styled.span>
            <styled.span
              small={true}
              style={Object {}}
              white={true}
            >
              <span
                className="sc-AykKD ietOlp"
                style={Object {}}
              />
            </styled.span>
          </div>
        </styled.div>
      </Loader>
    </button>
  </styled.button>
</Button>
`;

exports[`Button Secondary Button 1`] = `
<Button
  big={false}
  inverse={false}
  loading={false}
  secondary={true}
>
  <styled.button
    big={false}
    inverse={false}
    secondary={true}
  >
    <button
      className="sc-AykKE hiWZYq"
    >
      Secondary Button
    </button>
  </styled.button>
</Button>
`;

exports[`Button should render as a component 1`] = `
<Button
  big={false}
  inverse={false}
  loading={false}
  secondary={false}
>
  <styled.button
    big={false}
    inverse={false}
    secondary={false}
  >
    <button
      className="sc-AykKE hLfXme"
    >
      Hello World
    </button>
  </styled.button>
</Button>
`;
